@@ -5,7 +5,8 @@ Version 0.8.x
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 - Inline the _escape function, because function calls are expensive in Python.
-  [fschulze]
+  Added missing escaping for Unicode values.
+  [fschulze, hannosch]
 
 - When templates are instantiated outside of a class-definition, a
   relative file path will be made absolute using the module path.
